# hog_finder

./: .dockerignore  .gitignore  Chia Tracker Colab Notebook.url  Dockerfile  READEME.md  README.md  chia_tracker - Shortcut.lnk  convert_video.py  convert_videos.bat  prepare_dataset.py  requirements.txt  requirements_docker.txt  setup.cfg  setup.py  streamlit_app.py  training.py  video_to_png.bat  where_is_xiaomi.py
_dev/2021-03-27/: making_streamlit_app.md
center_of_mass/: center_of_mass_training.ipynb  label_centers.py  training.py  where_is_xiaomi.py
center_of_mass/.ipynb_checkpoints/: center_of_mass_training-checkpoint.ipynb
center_of_mass/com_labels/: 1.csv  2.csv  3.csv  4.csv  5.csv
hedgiefinder/: __init__.py  data.py  dataloading.py  hedgiefinder.bat  hedgiefinder.py  inference.py  overlays.py  prepare_dataset.py  video.py
hedgiefinder_bnel1201.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: model_application.ipynb  model_application_dev.ipynb  segmentation_train.html  segmentation_train.ipynb
notebooks/model_exploration/: compare_training_methods.ipynb  model_evaluation.ipynb  no_norm_history.csv  norm_history.csv  segmentation_train.html  segmentation_train.ipynb
present/: streamlit_app.py
scripts/: batch_mode.py  download_and_process_vid.py  make_preview_gif.bat  predict_masks.py
segmentation/: dataloading.py  hedgiefinder.py  inference.py  segmentation_train.html  segmentation_train.ipynb  training.py
segmentation/.ipynb_checkpoints/: segmentation_train-checkpoint.ipynb
test/: test_make_gifs.py  test_predict_masks.py
