[metadata]
# replace with your username:
name = hedgiefinder
version = 0.0.1
author = Brandon J Nelson
author_email = bnel1201@egmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bnel1201/hog_finder
project_urls =
    Bug Tracker = https://github.com/bnel1201/hog_finder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6